--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>フリアン自由学園</title>
 </head>
 <body>
-  動作
-  感情
-  思考
+  <ul>
+  <li>動作</li>
+  <li>感情</li>
+  <li>思考</li>
+</ul>
+
 </body>
 </html>
