ページ追加

--- a/thinking/index.html
+++ b/thinking/index.html
@@ -7,11 +7,7 @@
 <body>
   <h1>フリアン自由学園</h1>
 
-  <ul>
-<li><a href="thinking/" title="思考">思考</a></li>
-<li><a href="emotional/" title="感情">感情</a></li>
-<li><a href="moving/" title="動作">動作</a></li>
-</ul>
+  <h1>思考センター</h1>
 
   
 </body>
