下書き追加

--- a/emotional/index.html
+++ b/emotional/index.html
@@ -2,12 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link href="http://jasonm23.github.com/markdown-css-themes/markdark.css" rel="stylesheet"></link>
   <title>フリアン自由学園</title>
 </head>
 <body>
   <h1>フリアン自由学園</h1>
 
-  <h2>感情センター</h2>
+  <h2>ここには感情にまつわる話を書く</h2>
 
 <p><a href="../" title="トップページへ">戻る</a></p>
 
