--- a/moving/index.html
+++ b/moving/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link href="http://jasonm23.github.com/markdown-css-themes/markdark.css" rel="stylesheet"></link>
   <title>フリアン自由学園</title>
 </head>
 <body>
