--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link href="http://jasonm23.github.com/markdown-css-themes/markdark.css" rel="stylesheet"></link>
   <title>フリアン自由学園</title>
 </head>
 <body>
@@ -12,6 +13,10 @@
 <li><a href="emotional/" title="感情">感情</a></li>
 <li><a href="moving/" title="動作">動作</a></li>
 </ul>
+
+<p><img src="image/ENIAGRAM.png" width="100px" hight="100px" title="エニアグラム"></p>
+
+<p>準備中。</p>
 
   
 </body>
