トップページ修正

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
   <h1>フリアン自由学園</h1>
 
-  <ul>
-<li><a href="thinking/" title="思考">思考</a></li>
-<li><a href="emotional/" title="感情">感情</a></li>
-<li><a href="moving/" title="動作">動作</a></li>
-</ul>
+  <h3>第四の道は時として、ずるい人間の道と呼ばれる。</h3>
 
-<p><img src="image/ENIAGRAM.png" width="100px" hight="100px" title="エニアグラム"></p>
+<p><img src="image/ENIAGRAM.png" width="40px" hight="40px" title="エニアグラム">思考
+<img src="image/ENIAGRAM.png" width="40px" hight="40px" title="エニアグラム">感情
+<img src="image/ENIAGRAM.png" width="40px" hight="40px" title="エニアグラム"><a href="moving/" title="動作">動作</a></p>
 
-<p>準備中。</p>
+<p>ここでは&lt;私&gt;が接することができた道の知識を書いて残していきます。</br>
+記す内容は本で読んだもの、聞き伝えたもの、教えを受けたもの。</br>
+もし書いた内容に間違いがあるとすれば&lt;私&gt;の理解不足に起因するものです。</br>
+願わくは後の世にこの知識が正しく伝わっていくことを。</br></p>
 
   
 </body>
