トップページ修正

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img src="image/ENIAGRAM.png" width="40px" hight="40px" title="エニアグラム">感情
 <img src="image/ENIAGRAM.png" width="40px" hight="40px" title="エニアグラム"><a href="moving/" title="動作">動作</a></p>
 
-<p>ここでは&lt;私&gt;が接することができた道の知識と知識を書いて残していきます。</br>
+<p>ここでは&lt;私&gt;が接することができた道の知識を書いて残していきます。</br>
 記す内容は本で読んだもの、聞き伝えたもの、教えを受けたもの。</br>
 もし書いた内容に間違いがあるとすれば&lt;私&gt;の理解不足に起因するものです。</br>
 願わくは後の世にこの知識が必要とする場所に正しく伝わらんことを。</br></p>
