スタイルシート修正

--- a/moving/index.html
+++ b/moving/index.html
@@ -2,13 +2,23 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <link href="http://jasonm23.github.com/markdown-css-themes/markdark.css" rel="stylesheet"></link>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
+  <link rel="stylesheet" href="stylesheet.css" />
   <title>フリアン自由学園</title>
 </head>
 <body>
   <h1>フリアン自由学園</h1>
 
-  <h2>武道</h2>
+  <h2>動作の訓練</h2>
+
+<p>ここは身体の使い方をより効率的にするために試行錯誤する記録です。</p>
+
+<ul>
+<li>合気</li>
+<li>八寸の延金</li>
+<li>整体</li>
+<li>体当たり</li>
+</ul>
 
 <p><a href="../" title="トップページへ">戻る</a></p>
 
