--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <link href="http://jasonm23.github.com/markdown-css-themes/markdark.css" rel="stylesheet"></link>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css" />
+  <link rel="stylesheet" href="stylesheet.css" />
   <title>フリアン自由学園</title>
 </head>
 <body>
